# SCEPCAL

./: .gitignore  CMakeLists.txt  README.md  SCEPCALsim.sh  SCEPCALsim.sub  flake.nix  init_k4.sh  init_sipm.sh  setupSCEPCAL.sh
Detector/: CMakeLists.txt
Detector/SCEPCAL/: CMakeLists.txt
Detector/SCEPCAL/compact/: SCEPCAL.xml
Detector/SCEPCAL/src/: SCEPCALConstructor.cpp
Detector/SCEPCALcomponents/: CMakeLists.txt
Detector/SCEPCALsegmentation/: CMakeLists.txt
Detector/SCEPCALsegmentation/include/: SCEPCALSegmentation.h  SCEPCALSegmentationHandle.h
Detector/SCEPCALsegmentation/src/: SCEPCALSegmentation.cpp  SCEPCALSegmentationHandle.cpp  SegmentationFactories.cpp
Detector/SCEPCALsensitive/: CMakeLists.txt
Detector/SCEPCALsensitive/include/: SCEPCALSiPMSD.h  SiPMHit.h
Detector/SCEPCALsensitive/src/: SCEPCALSiPMSD.cpp  SDWrapper.cpp  SiPMHit.cpp
SCEPCALsim/: CMakeLists.txt
SCEPCALsim/SCEPCALsimG4Components/: CMakeLists.txt
SCEPCALsim/SCEPCALsimG4Components/include/: SimG4SaveSCEPCALHits.h  SimG4SaveSCEPCALMCTruth.h
SCEPCALsim/SCEPCALsimG4Components/src/: SimG4SaveSCEPCALHits.cpp  SimG4SaveSCEPCALMCTruth.cpp
SCEPCALsim/SCEPCALsimG4Components/test/: runSCEPCALsim.py
SCEPCALsim/SCEPCALsimG4Full/: CMakeLists.txt
SCEPCALsim/SCEPCALsimG4Full/include/: SimG4SCEPCALActionInitialization.h  SimG4SCEPCALEventAction.h  SimG4SCEPCALSteppingAction.h
SCEPCALsim/SCEPCALsimG4Full/src/components/: SimG4OpticalPhysicsList.cpp  SimG4SCEPCALActions.cpp  SimG4SCEPCALActions.h
SCEPCALsim/SCEPCALsimG4Full/src/lib/: SimG4SCEPCALActionInitialization.cpp  SimG4SCEPCALEventAction.cpp  SimG4SCEPCALSteppingAction.cpp
